# origin

./: .gitignore
AdvancedProgramming/CourseProjectIniFilesParser/: CourseProjectIniFilesParser.sln  IniParser.sln
AdvancedProgramming/CourseProjectIniFilesParser/CourseProjectIniFilesParser/: CourseProjectIniFilesParser.cpp  CourseProjectIniFilesParser.vcxproj  CourseProjectIniFilesParser.vcxproj.filters
AdvancedProgramming/CourseProjectIniFilesParser/IniParser/: IniFile.ini  IniParser.cpp  IniParser.vcxproj  IniParser.vcxproj.filters
AdvancedProgramming/InnovationsInC++/Task1/: Task1.sln
AdvancedProgramming/InnovationsInC++/Task2/: Task2.sln
AdvancedProgramming/Task10.1/: Task10.1.sln
AdvancedProgramming/Task10.1/Task10.1/: Task10.1.cpp  Task10.1.vcxproj  Task10.1.vcxproj.filters
AdvancedProgramming/Task10.2/: Task10.2.sln
AdvancedProgramming/Task10.2/Task10.2/: Task10.2.vcxproj  Task10.2.vcxproj.filters
AdvancedProgramming/Task10.3/: Task10.3.sln
AdvancedProgramming/Task10.3/Task10.3/: Task10.3.cpp  Task10.3.vcxproj  Task10.3.vcxproj.filters  my_ptr.h
AdvancedProgramming/Task11.1/: Task11.1.sln
AdvancedProgramming/Task11.2/: Task11.2.sln
AdvancedProgramming/Task2.1/: Task2.1.sln
AdvancedProgramming/Task3.1/: Task3.1.sln
AdvancedProgramming/Task3.2/: Task3.2.sln
AdvancedProgramming/Task4.1/: CMakeLists.txt  main.cpp
AdvancedProgramming/Task4.2/: CMakeLists.txt  main.cpp
AdvancedProgramming/Task5.1/: Task5.1.sln
AdvancedProgramming/Task5.2/: Task5.2.sln
AdvancedProgramming/Task7.1/: Task7.1.sln
AdvancedProgramming/Task7.2/: Task7.2.sln
AdvancedProgramming/Task7.3/: Task7.3.sln
AdvancedProgramming/Task8.1/: Task8.1.sln
AdvancedProgramming/Task8.2/: Task8.2.sln
Design_Patterns/Task1.1/: CMakeLists.txt  data.h  main.cpp  sql_query_builder.cpp  sql_query_builder.h
Design_Patterns/Task1.2/: main.cpp  sql_query_builder.cpp  sql_query_builder.h
Design_Patterns/Task1.3/: CMakeLists.txt  main.cpp  sql_query_builder.cpp  sql_query_builder.h
Design_Patterns/Task2.1/: Task2.1.cpp  Task2.1.sln  Task2.1.vcxproj
Design_Patterns/Task2.2/: Task2.2.cpp  Task2.2.sln  Task2.2.vcxproj
Design_Patterns/Task4.1/: Task4.1.cpp  Task4.1.sln  Task4.1.vcxproj  Task4.1.vcxproj.filters
Design_Patterns/Task4.2/: Task4.2.cpp  Task4.2.sln  Task4.2.vcxproj  file_JSON.JSON  file_Text.txt  file_html.html
Lesson 1/Task1_1/: Task1_1.sln
Lesson 2/Task2.1/: Task2.1.sln
Lesson 2/Task2.2/: Task2.2.sln
Lesson 2/Task2.3/: Task2.3.sln
Lesson 3/Task3.1/: Task3.1.sln
Lesson 3/Task3.2/: Task3.2.sln
Lesson 4/Task4.1/: Task4.1.sln
Lesson 4/Task4.2/: Task4.2.sln
Lesson11/CourseProject/RacingSimulator_CMake/src/: CMakeLists.txt  Functions.h  Functons.cpp  RacingSimulator.cpp
Lesson11/CourseProject/RacingSimulator_CMake/src/LibraryDynamic/: AirRace.cpp  AirRace.h  AirTransport.h  AllTerrainBoots.cpp  Broom.cpp  CMakeLists.txt  Camel.cpp  CamelFast.cpp  CamelFast.h  CarpetPlane.cpp  CarpetPlane.h  Centaur.cpp  Centaur.h  Eagle.cpp  Enums.h  GroundTransport.h  ITransport.h  LandAndAirRace.cpp  LandAndAirRace.h  LandRace.cpp  LandRace.h  Race.cpp
Lesson11/Task11.3/LeavingLibraryDynamic/src/: CMakeLists.txt  LeavingClient.cpp
Lesson11/Task11.3/LeavingLibraryDynamic/src/leaving_library_dynamic/: CMakeLists.txt  DynamicLeaving.h
Lesson11/Task11.5/FiguresLibraryDynamic/src/: CMakeLists.txt  FiguresClient.cpp
Lesson11/Task11.5/FiguresLibraryDynamic/src/figures_library_dynamic/: CMakeLists.txt  equilateralTriangle.h  figure.cpp  figure.h  isoscelesTriangle.h  quadrilateral.h  rhombus.cpp  rightTriangle.h  square.h  triangle.cpp  triangle.h
Lesson5/Task5.1/: Task5.1.sln
Lesson5/Task5.2/: Task5.2.sln
Lesson5/Task5.3/: Task5.3.sln
Lesson6/Task6.1/: Task6.1.sln
Lesson6/Task6.3/: Task6.3.sln
Lesson6/Tasl6.2/: Tasl6.2.sln
Lesson7/Task7.1/: Task7.1.sln
Lesson7/Task7.2/: Task7.2.sln
Lesson8/Task8.1/: Task8.1.sln
Lesson9/Task9.1/: Task9.1.sln
Lesson9/Task9.2/: Task9.2.sln
Lessson8/Task8.2/: Task8.2.sln
Multithreaded_and_Asynchronous_Programming/Task1.1/: Task1.1.cpp  Task1.1.sln  Task1.1.vcxproj  Task1.1.vcxproj.filters
Multithreaded_and_Asynchronous_Programming/Task1.2/: Task1.2.cpp  Task1.2.sln  Task1.2.vcxproj  Task1.2.vcxproj.filters
Multithreaded_and_Asynchronous_Programming/Task2.1/: Task2.1.cpp  Task2.1.sln  Task2.1.vcxproj
Multithreaded_and_Asynchronous_Programming/Task2.2/: ConsolParameter.cpp  ConsolParameter.h  Task2.2.cpp  Task2.2.sln  Task2.2.vcxproj  Task2.2.vcxproj.filters  Timer.cpp  Timer.h
Multithreaded_and_Asynchronous_Programming/Task2.3/: Task2.3.cpp  Task2.3.sln  Task2.3.vcxproj
Multithreaded_and_Asynchronous_Programming/Task3.1/: Task3.1.cpp  Task3.1.sln  Task3.1.vcxproj
Multithreaded_and_Asynchronous_Programming/Task3.2/: Task3.2.cpp  Task3.2.sln  Task3.2.vcxproj
Multithreaded_and_Asynchronous_Programming/Task4.1/: Task4.1.cpp  Task4.1.sln  Task4.1.vcxproj  Task4.1.vcxproj.filters  circle.cpp  circle.h  cylinder.cpp  cylinder.h  line.cpp  line.h  parallelepiped.cpp  parallelepiped.h  pointXY.cpp  pointXY.h  pointXYZ.cpp  pointXYZ.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h
Qt/2. Qt_core_modules/: CMakeLists.txt  main.cpp
Qt/3. Qt Designer/: CMakeLists.txt  dialogwindowconnecttodb.cpp  dialogwindowconnecttodb.h  dialogwindowconnecttodb.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  windowconnectingtodb.cpp  windowconnectingtodb.h  windowconnectingtodb.ui
Qt/4. Qt Widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/5. SignalsAndSlots/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt/6. QtConcurrent/: ExampleRace.cpp  ExampleRace.h  main.cpp  mainwindow.cpp  mainwindow.h
Qt/7. Graphics/: CMakeLists.txt  graphicchart.cpp  graphicchart.h  mainwindow.cpp  mainwindow.h
Working with databases/Task1.2/: MusicSite.sql
Working with databases/Task2/: employees.sql
Working with databases/Task4/: 1. INSERT-requests.sql  2.3.4. SELECT-requests.sql  CREATE-requests.sql
Working with databases/Task5/ClientDataBase001/: CMakeLists.txt  main.cpp
(+327 files in other folders)
